build(1.0.x): 对齐 pom.xml 描述与 JDK 版本号; 修复 isBlank 不兼容 JDK 8